--- a/.github/workflows/s-scan.yml
+++ b/.github/workflows/s-scan.yml
@@ -1,4 +1,4 @@
-name: Security Scan (SAST)
+name: SAST
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  
+        fetch-depth: 0
     
     - name: Use Node.js
       uses: actions/setup-node@v4
@@ -29,22 +29,8 @@ jobs:
       run: npm test -- --coverage --watchAll=false
       continue-on-error: true
     
-    - name: SonarQube Scan
-      uses: sonarqube-quality-gate-action@master
-      with:
-        scanMetadataReportFile: target/sonar/report-task.txt
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    
-    - name: SonarQube Quality Gate Check
-      uses: sonarqube-quality-gate-action@master
-      timeout-minutes: 5
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    
     - name: Run SonarCloud Analysis
-      uses: SonarSource/sonarcloud-github-action@master
+      uses: SonarSource/sonarcloud-github-action@v2.3.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -57,9 +43,16 @@ jobs:
           -Dsonar.test.inclusions=**/*.test.js,**/*.spec.js
           -Dsonar.coverage.exclusions=**/*.test.js,**/*.spec.js,**/node_modules/**
           -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+    
+    - name: SonarQube Quality Gate Check
+      uses: sonarqube-quality-gate-action@v1.3.0
+      timeout-minutes: 5
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   
   codeql-analysis:
     runs-on: ubuntu-latest
+    # rodar só pr pra dev
     if: startsWith(github.head_ref, 'feature/')
     
     strategy:
@@ -93,6 +86,7 @@ jobs:
   
   dependency-review:
     runs-on: ubuntu-latest
+    # rodar só pr pra dev
     if: startsWith(github.head_ref, 'feature/')
     
     steps:
