--- a/.github/workflows/s-scan.yml
+++ b/.github/workflows/s-scan.yml
@@ -9,91 +9,87 @@ jobs:
   sonarqube-sast:
     runs-on: ubuntu-latest
     if: startsWith(github.head_ref, 'feature/') # rodar só pr pra dev
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Run tests with coverage
-      run: npm test -- --coverage --watchAll=false
-      continue-on-error: true
-    
-    - name: Run SonarCloud Analysis
-      uses: SonarSource/sonarcloud-github-action@v2.3.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: >
-          -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-          -Dsonar.sources=src
-          -Dsonar.tests=src
-          -Dsonar.test.inclusions=**/*.test.js,**/*.spec.js
-          -Dsonar.coverage.exclusions=**/*.test.js,**/*.spec.js,**/node_modules/**
-          -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-    
-    - name: SonarQube Quality Gate Check
-      uses: sonarqube-quality-gate-action@v1.3.0
-      timeout-minutes: 5
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest-cov
+
+      - name: Run tests with coverage
+        run: |
+          pytest --cov=src --cov-report=xml --cov-report=html --junitxml=test-results.xml
+        continue-on-error: true
+
+      - name: Run SonarCloud Analysis
+        uses: SonarSource/sonarcloud-github-action@v2.3.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.sources=src,veritrace
+            -Dsonar.tests=tests
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.python.xunit.reportPath=test-results.xml
+            -Dsonar.coverage.exclusions=**/test_**,**/*_test.py,**/conftest.py
+
+      - name: SonarQube Quality Gate Check
+        uses: sonarqube-quality-gate-action@v1.3.0
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   codeql-analysis:
     runs-on: ubuntu-latest
-    # rodar só pr pra dev
-    if: startsWith(github.head_ref, 'feature/')
-    
+    if: startsWith(github.head_ref, 'feature/') # rodar só pr pra dev
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript' ]
-    
+        language: [ 'python' ]
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ matrix.language }}
-    
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build project
-      run: npm run build
-    
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
-  
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+
   dependency-review:
     runs-on: ubuntu-latest
-    # rodar só pr pra dev
-    if: startsWith(github.head_ref, 'feature/')
-    
+    if: startsWith(github.head_ref, 'feature/') # rodar só pr pra dev
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    
-    - name: Dependency Review
-      uses: actions/dependency-review-action@v4
-      with:
-        fail-on-severity: moderate
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
+        with:
+          fail-on-severity: moderate
