--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,34 +59,34 @@ jobs:
         python-version: 3.11
 
     - name: Install dependencies
-    - run: |
+      run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run full test suite
-    - run: |
+      run: |
         pytest --cov=src --cov-report=xml
 
     - name: Build production package
-    - run: |
+      run: |
         python -m pip install build
         python -m build
 
     - name: Create Docker image
-    - run: |
+      run: |
         echo "Building Docker image..."
         # docker build -t veritrace:${{ github.ref_name }} .
         echo "Docker image created: veritrace:${{ github.ref_name }}"
 
     - name: Deploy to main
-    - run: |
+      run: |
         echo "Deploying to production..."
         echo "Version: ${{ github.ref_name }}"
         # comandos deploy prod 
         echo "Production deployment completed"
 
     - name: Create deployment notification
-    - run: |
+      run: |
         echo "VeriTrace ${{ github.ref_name }} deployed successfully to production"
 
   publish-package:
@@ -104,12 +104,12 @@ jobs:
         python-version: 3.11
 
     - name: Install publishing dependencies
-    - run: |
+      run: |
         python -m pip install --upgrade pip
         pip install build twine
 
     - name: Build package
-    - run: |
+      run: |
         python -m build
 
     - name: Publish to PyPI
@@ -128,7 +128,7 @@ jobs:
 
     steps:
     - name: Deployment notification
-    - run: |
+      run: |
         if [ "${{ needs.deploy-homologation.result }}" == "success" ]; then
           echo "✅ Homologation deployment successful"
         fi
