--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,62 +3,136 @@ name: CD
 on:
   push:
     branches: [ main ]
+    tags: [ 'v*' ]
   release:
     types: [ published ]
 
 jobs:
-  deploy:
+  deploy-homologation:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    
+    environment: homologation
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js
-      uses: actions/setup-node@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        node-version: '20.x'
-        cache: 'npm'
-    
+        python-version: 3.11
+
     - name: Install dependencies
-      run: npm ci
-    
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
     - name: Run tests
-      run: npm test
-    
-    - name: Build application
-      run: npm run build
-    
-    - name: Deploy to staging
       run: |
-        echo "Deploying to staging environment..."
-        # Add your deployment commands here
-        # Example: npm run deploy:staging
-      env:
-        DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
-    
-  release:
+        pytest --cov=src --cov-report=xml
+
+    - name: Build application
+      run: |
+        echo "Building VeriTrace application..."
+        # Add your build commands here
+        python -c "print('Build completed')"
+
+    - name: Deploy to homologation
+      run: |
+        echo "Deploying to homologation environment..."
+        # comandos deploy homol
+        echo "Homologation deployment completed"
+
+  deploy-production:
     runs-on: ubuntu-latest
-    if: github.event_name == 'release'
-    
+    if: startsWith(github.ref, 'refs/tags/v')
+    environment: Main
+    needs: []
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js
-      uses: actions/setup-node@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        node-version: '20.x'
-        cache: 'npm'
-    
+        python-version: 3.11
+
     - name: Install dependencies
-      run: npm ci
-    
-    - name: Build application
-      run: npm run build
-    
-    - name: Deploy to production
       run: |
-        echo "Fazendo o deploy para o ambiente de prod..."
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run full test suite
+      run: |
+        pytest --cov=src --cov-report=xml
+
+    - name: Build production package
+      run: |
+        python -m pip install build
+        python -m build
+
+    - name: Create Docker image
+      run: |
+        echo "Building Docker image..."
+        # docker build -t veritrace:${{ github.ref_name }} .
+        echo "Docker image created: veritrace:${{ github.ref_name }}"
+
+    - name: Deploy to main
+      run: |
+        echo "Deploying to production..."
+        echo "Version: ${{ github.ref_name }}"
+        # comandos deploy prod 
+        echo "Production deployment completed"
+
+    - name: Create deployment notification
+      run: |
+        echo "VeriTrace ${{ github.ref_name }} deployed successfully to production"
+
+  publish-package:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [deploy-production]
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+
+    - name: Install publishing dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build twine
+
+    - name: Build package
+      run: |
+        python -m build
+
+    - name: Publish to PyPI
       env:
-        DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
-        PRODUCTION_API_KEY: ${{ secrets.PRODUCTION_API_KEY }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      run: |
+        # Uncomment when ready to publish to PyPI
+        # twine upload dist/*
+        echo "Package ready for PyPI publication"
+
+  notify:
+    runs-on: ubuntu-latest
+    needs: [deploy-homologation, deploy-production]
+    if: always()
+
+    steps:
+    - name: Deployment notification
+      run: |
+        if [ "${{ needs.deploy-homologation.result }}" == "success" ]; then
+          echo "✅ Homologation deployment successful"
+        fi
+        if [ "${{ needs.deploy-production.result }}" == "success" ]; then
+          echo "✅ Production deployment successful"
+        fi
+        echo "VeriTrace deployment pipeline completed"
