--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,11 +14,11 @@ jobs:
     environment: homologation
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4.2.2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Setup Python
+      uses: actions/setup-python@v5.6.0
       with:
         python-version: 3.11
 
@@ -50,43 +50,43 @@ jobs:
     needs: []
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4.2.2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Setup Python
+      uses: actions/setup-python@v5.6.0
       with:
         python-version: 3.11
 
     - name: Install dependencies
-      run: |
+    - run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run full test suite
-      run: |
+    - run: |
         pytest --cov=src --cov-report=xml
 
     - name: Build production package
-      run: |
+    - run: |
         python -m pip install build
         python -m build
 
     - name: Create Docker image
-      run: |
+    - run: |
         echo "Building Docker image..."
         # docker build -t veritrace:${{ github.ref_name }} .
         echo "Docker image created: veritrace:${{ github.ref_name }}"
 
     - name: Deploy to main
-      run: |
+    - run: |
         echo "Deploying to production..."
         echo "Version: ${{ github.ref_name }}"
         # comandos deploy prod 
         echo "Production deployment completed"
 
     - name: Create deployment notification
-      run: |
+    - run: |
         echo "VeriTrace ${{ github.ref_name }} deployed successfully to production"
 
   publish-package:
@@ -95,21 +95,21 @@ jobs:
     needs: [deploy-production]
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4.2.2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Setup Python
+      uses: actions/setup-python@v5.6.0
       with:
         python-version: 3.11
 
     - name: Install publishing dependencies
-      run: |
+    - run: |
         python -m pip install --upgrade pip
         pip install build twine
 
     - name: Build package
-      run: |
+    - run: |
         python -m build
 
     - name: Publish to PyPI
@@ -128,7 +128,7 @@ jobs:
 
     steps:
     - name: Deployment notification
-      run: |
+    - run: |
         if [ "${{ needs.deploy-homologation.result }}" == "success" ]; then
           echo "✅ Homologation deployment successful"
         fi
