chore: comment out reviewer field in feature workflow

--- a/.github/workflows/feature-flow.yml
+++ b/.github/workflows/feature-flow.yml
@@ -38,4 +38,4 @@ jobs:
           base: "develop" # Target branch
           branch: "${{ github.ref_name }}" # Source branch
           labels: "automated-pr, feature"
-          reviewers: "AlfredoFilho" 
+          # reviewers: "AlfredoFilho" 
