feat: add pull request permissions to workflows

--- a/.github/workflows/feature-flow.yml
+++ b/.github/workflows/feature-flow.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   validate-and-create-pr:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
