--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,16 @@ sqlalchemy>=2.0.0
 pydantic>=2.0.0
 fastapi>=0.100.0
 uvicorn>=0.20.0
+pyyaml>=6.0
 
 # Processamento de dados
 pyarrow>=12.0.0
 openpyxl>=3.1.0
 xlrd>=2.0.0
+
+# API Server
+fastapi>=0.70.0
+uvicorn[standard]>=0.15.0
 
 # Airflow
 apache-airflow>=2.7.0
